Typos in hires_DAS example doc

--- a/examples/app_hires_DAS_fixed/doc/rst/AN00218.rst
+++ b/examples/app_hires_DAS_fixed/doc/rst/AN00218.rst
@@ -5,7 +5,7 @@
 Overview
 --------
 
-This demo application shows a simple DAS bemformer in high resolution mode.
+This demo application shows a simple Delay and Sum (DAS) bemformer in high resolution mode.
 
 
 |appendix|
@@ -14,7 +14,7 @@ This demo application shows a simple DAS bemformer in high resolution mode.
 Demo Hardware Setup
 ------------------- 
 
-Ensure that an XTAG is connected along with the microphone array via USB. Headphones hsould be connected to the audio jack for listening to the beamformed output.
+Ensure that an XTAG is connected along with the microphone array via USB. Headphones should be connected to the audio jack for listening to the beamformed output.
 
 |newpage|
 
