Typo in AN00219

--- a/examples/app_lores_DAS_fixed/doc/rst/AN00219.rst
+++ b/examples/app_lores_DAS_fixed/doc/rst/AN00219.rst
@@ -5,7 +5,7 @@
 Overview
 --------
 
-This demo application shows a simple (Delay and Sum) DAS beam-former.
+This demo application shows a simple Delay and Sum (DAS) beam-former.
 
 
 |appendix|
