--- a/examples/AN00217_app_high_resolution_delay_example/doc/rst/AN00217.rst
+++ b/examples/AN00217_app_high_resolution_delay_example/doc/rst/AN00217.rst
@@ -7,20 +7,44 @@ Overview
 
 This demo application shows how to interface to the microphone array in high resolution mode.
 
-|appendix|
 |newpage|
+
+The high resolution delay example
+---------------------------------
+
+The example in this note uses the microphone array library and shows a simple program
+that interfaces to to the PDM microphones, decimates the PDM and finally packs it into frames.
+
+To start using the microphone array library library, you need to add ``lib_mic_array`` to
+your ``Makefile``::
+
+        USED_MODULES = ... lib_mic_array ...
+
+You can then access the microphone array library functions in your source code via
+the ``lib_mic_array.h`` header file::
+
+	#include ""lib_mic_array.h""
 
 Demo Hardware Setup
 ------------------- 
 
-Ensure that an XTAG is connected along with the microphone array via USB.
-
-|newpage|
+	#. Connect the xTAG-2 or xTAG-3 to Microphone array ref design v1.
+	#. Connect the xTAG-2 or xTAG-3 USB connector to the USB connector on your development PC using a USB cable. 
+	#. Connect the Microphone array ref design v1 to your development PC using another USB cable. 
 
 Launching the demo application
 ------------------------------
+Once the application source code is imported into the tools you can then build the project
+which will generate the binary file required to run the demo application.
 
-Build the application then run using ``xrun app_high_resolution_delay_example.xe``.
+Once the application has been built you need to download the application binary
+code onto the xCORE microphone array ref design v1. Here you use the tools to load the application 
+over JTAG onto the xCORE multicore microcontroller.
+
+Then click **Run**.
+
+Alternatively, from the command line build the application, by doing a call to ``xmake``, then 
+run using ``xrun app_high_resolution_delay_example.xe``. Nothing will happen.
 
 Task setup
 ----------
@@ -111,6 +135,13 @@ with the first index denoting the channel number and the second index denoting t
 index used 0 for the oldest samples and 2 to the power of ``dcc.frame_size_log2`` minus one as the newest
 samples.
 		  
+Updating the delays
+-------------------
+
+The high resolution delay task is initially set to delay by a zero 384kHz clock cycles. Each channel can 
+be delayed by up to HIRES_MAX_DELAY (default 32) samples at a sample rate of 384kHz. Setting of the taps
+is done through the function ``hires_delay_set_taps();`` which will do an atomic update of all the 
+active delay lines tap positions at once.
 		  
 |newpage|
 
