--- a/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
+++ b/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
@@ -7,20 +7,45 @@ Overview
 
 This demo application shows the minimum code to interface to the microphone array.
 
-|appendix|
 |newpage|
+
+The microphone array phase-aligned capture example
+--------------------------------------------------
+
+The example in this note uses the microphone array library and shows a simple program
+that interfaces to to the PDM microphones, decimates the PDM and finally packs it into frames.
+
+To start using the microphone array library library, you need to add ``lib_mic_array`` to
+your ``Makefile``::
+
+        USED_MODULES = ... lib_mic_array ...
+
+You can then access the microphone array library functions in your source code via
+the ``lib_mic_array.h`` header file::
+
+	#include ""lib_mic_array.h""
 
 Demo Hardware Setup
 ------------------- 
 
-Ensure that an XTAG is connected along with the microphone array via USB.
-
-|newpage|
+	#. Connect the xTAG-2 or xTAG-3 to Microphone array ref design v1.
+	#. Connect the xTAG-2 or xTAG-3 USB connector to the USB connector on your development PC using a USB cable. 
+	#. Connect the Microphone array ref design v1 to your development PC using another USB cable. 
 
 Launching the demo application
 ------------------------------
 
-Build the application then run using ``xrun app_phase_aligned_example.xe``.
+Once the application source code is imported into the tools you can then build the project
+which will generate the binary file required to run the demo application.
+
+Once the application has been built you need to download the application binary
+code onto the xCORE microphone array ref design v1. Here you use the tools to load the application 
+over JTAG onto the xCORE multicore microcontroller.
+
+Then click **Run**.
+
+Alternatively, from the command line build the application, by doing a call to ``xmake``, then 
+run using ``xrun app_phase_aligned_example.xe``. Nothing will happen.
 
 Task setup
 ----------
@@ -47,7 +72,7 @@ Note that the decimators have to be on the same tile as the application due to s
 Frame memory
 ------------
 
-For each decimator an block of memory must be allocated for storing FIR data. The size of the data 
+For each decimator a block of memory must be allocated for storing FIR data. The size of the data 
 block must be::
   
   Number of channels for that decimator * THIRD_STAGE_COEFS_PER_STAGE * Decimation factor * sizeof(int)
@@ -105,7 +130,8 @@ with the first index denoting the channel number and the second index denoting t
 index used 0 for the oldest samples and 2 to the power of ``dcc.frame_size_log2`` minus one as the newest
 samples.
 		  
-		  
+	
+|appendix|	  
 |newpage|
 
 References
