corrected Source code include file names in app notes

--- a/examples/AN00219_app_lores_DAS_fixed/doc/rst/AN00219.rst
+++ b/examples/AN00219_app_lores_DAS_fixed/doc/rst/AN00219.rst
@@ -161,8 +161,8 @@ References
 Full source code listing
 ------------------------
 
-Source code for main.xc
-.......................
+Source code for app_lores_DAS_fixed.xc
+......................................
 
 .. literalinclude:: app_lores_DAS_fixed.xc
   :largelisting:
