--- a/examples/AN00217_app_high_resolution_delay_example/doc/rst/AN00217.rst
+++ b/examples/AN00217_app_high_resolution_delay_example/doc/rst/AN00217.rst
@@ -167,8 +167,8 @@ References
 Full source code listing
 ------------------------
 
-Source code for main.xc
-.......................
+Source code for app_high_resolution_delay_example.xc
+....................................................
 
 .. literalinclude:: app_high_resolution_delay_example.xc
   :largelisting:
