--- a/examples/AN00218_app_hires_DAS_fixed/doc/rst/AN00218.rst
+++ b/examples/AN00218_app_hires_DAS_fixed/doc/rst/AN00218.rst
@@ -176,8 +176,8 @@ References
 Full source code listing
 ------------------------
 
-Source code for main.xc
-.......................
+Source code for app_hires_DAS_fixed.xc
+......................................
 
 .. literalinclude:: app_hires_DAS_fixed.xc
   :largelisting:
