--- a/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
+++ b/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
@@ -156,8 +156,8 @@ References
 Full source code listing
 ------------------------
 
-Source code for main.xc
-.......................
+Source code for app_phase_aligned_example.xc
+............................................
 
 .. literalinclude:: app_phase_aligned_example.xc
   :largelisting:
