--- a/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
+++ b/examples/AN00220_app_phase_aligned_example/doc/rst/AN00220.rst
@@ -55,7 +55,14 @@ and to the application (``example()``). There needs to be one ``decimate_to_pcm_
 every four channels that need processing. The PDM interface task, ``pdm_rx()`` can process 
 eight channels so only one is needed per eight channels. The PDM interface must be connected 
 to each of the decimators via a streaming channel. Finally, the decimators have to be 
-connected to the application. This gives the following task diagram::
+connected to the application. This gives the following task diagram:
+
+  .. figure:: chan4-8.pdf
+	:width: 100%
+	    
+	Task diagram of the example
+
+Or represented in code as::
 
   streaming chan c_pdm_to_dec[2];
   streaming chan c_ds_output[2];
